--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <main class="main">
 
                 <section class="order">
+
                     <div class="order__header">
                         <button class="order__prev">
                             Назад
@@ -107,20 +108,238 @@
                             Дальше
                         </button>
                     </div>
+
+                    <div class="order__body">
+                        <div class="order__info">
+                            <p>Заказ</p>
+                            <span></span>
+                            <p>399 ₽</p>
+                        </div>
+
+                        <ul class="order__list">
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                            <li class="order__item">
+                                <p>Куриные нагенсы</p>
+                                <p>1</p>
+                                <p>99 ₽</p>
+                            </li>
+                        </ul>
+                    </div>
+
                 </section>
 
                 <section class="category">
 
+                    <h3 class="category__title">Меню</h3>
+
+                    <ul class="category__list">
+                        <li class="category__item">
+                            <button class="category__button">
+                                Горячее
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Холодное
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Горячее
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Холодное
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Горячее
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Холодное
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Горячее
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Холодное
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Холодное
+                            </button>
+                        </li>
+                        <li class="category__item">
+                            <button class="category__button">
+                                Холодное
+                            </button>
+                        </li>
+                    </ul>
+
                 </section>
 
                 <section class="menu">
+                    <h3 class="menu__title">Горячее</h3>
 
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                        <li class="menu__item">
+                            <button class="menu__button">
+                                <p>Крылышки барбекю</p>
+                                <span>319 ₽</span>
+                            </button>
+                        </li>
+                    </ul>
                 </section>
 
             </main>
 
             <footer class="footer">
-
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a class="footer__payment" href="#">Оплата</a>
+                    </li>
+                    <li class="footer__item">
+                        <button class="footer__discount">Скидки</button>
+                    </li>
+                    <li class="footer__item">
+                        <button class="footer__code">Код</button>
+                    </li>
+                    <li class="footer__item">
+                        <button class="footer__save">Сохранить заказ</button>
+                    </li>
+                </ul>
             </footer>
 
         </div>
